# mahler

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  wrangler.toml
mahler-backtest/: Cargo.toml
mahler-backtest/data/orats/: download_progress.json
mahler-backtest/src/: lib.rs  main.rs
mahler-backtest/src/analytics/: spread_screener.rs
mahler-backtest/src/backtest/: engine.rs  mod.rs  trade.rs
mahler-backtest/src/broker/: mod.rs
mahler-backtest/src/data/: loader.rs  mod.rs  orats.rs  types.rs
mahler-backtest/src/engine_core/: events.rs
mahler-backtest/src/metrics/: mod.rs
mahler-backtest/src/portfolio/: mod.rs
mahler-backtest/src/regime/: classifier.rs
mahler-backtest/src/risk/: mod.rs  portfolio_greeks.rs  position_sizer.rs
mahler-backtest/src/strategy/: put_spread.rs
mahler-backtest/src/walkforward/: mod.rs  optimizer.rs  periods.rs
mahler-backtest/tests/: determinism.rs
traderjoe/: CLAUDE.md  Cargo.toml  pyproject.toml  wrangler.toml
traderjoe/docs/: ARCHITECTURE_V2.md  GO_LIVE_GATE.md
traderjoe/docs/plans/: 2026-04-08-trader-joe-rust-rework.md
traderjoe/docs/specs/: 2026-04-08-trader-joe-rust-rework-design.md
traderjoe/mahler-backtest/: autoresearch_changelog.md  autoresearch_results.tsv
traderjoe/mahler-backtest/src/analytics/: iv_term_structure.rs  mod.rs
traderjoe/mahler-backtest/src/backtest/: commission.rs  mod.rs
traderjoe/mahler-backtest/src/broker/: backtest.rs
traderjoe/mahler-backtest/src/portfolio/: tracker.rs
traderjoe/mahler-backtest/src/regime/: mod.rs
traderjoe/mahler-backtest/src/risk/: mod.rs
traderjoe/mahler-backtest/src/strategy/: mod.rs  put_spread.rs
traderjoe/mahler-backtest/src/validation/: data_integrity.rs
traderjoe/mahler-backtest/src/walkforward/: optimizer.rs
traderjoe/scripts/: __init__.py  requirements-training.txt  train_models.py
traderjoe/scripts/training/: __init__.py  exit_trainer.py  regime_trainer.py
traderjoe/src/: config.rs  entry.py  lib.rs  types.rs
traderjoe/src/analysis/: iv_rank.rs  screener.rs
traderjoe/src/broker/: alpaca.rs  mod.rs  types.rs
traderjoe/src/core/: types.py
traderjoe/src/core/agents/: __init__.py  analysts.py  decision.py  facilitator.py  orchestrator.py  trader.py
traderjoe/src/core/ai/: prompts.py  router.py
traderjoe/src/db/: d1.rs  kv.rs
traderjoe/src/handlers/: eod_summary.py  eod_summary.rs  health.py  mod.rs  morning_scan.rs  position_monitor.rs  weekly_metrics.rs
traderjoe/src/measurement/: equity.rs  market_context.rs  metrics.rs  mod.rs  nbbo.rs  portfolio_greeks.rs
traderjoe/src/migrations/: 0001_initial.sql  0001_initial_schema.sql  0002_iv_history.sql  0002_measurement_infrastructure.sql  0005_market_regimes.sql  0007_rule_validation.sql  0011_tradinggroup.sql  0012_finmem_memory_enhancement.sql  0013_backtest_semantic_rules.sql  0014_add_target_agents_column.sql  0017_trader_joe_tables.sql
traderjoe/src/notifications/: discord.rs
traderjoe/src/risk/: position_sizer.rs
traderjoe/tests/: conftest.py
traderjoe/tests/integration/: test_v2_pipeline.py
traderjoe/trader-joe/src/: config.rs  lib.rs  types.rs
traderjoe/traderjoe-backtest/: AUTORESEARCH.md  Cargo.toml  autoresearch_results.tsv
traderjoe/traderjoe-backtest/src/: lib.rs  main.rs
traderjoe/traderjoe-backtest/tests/: determinism.rs
(+413 files in other folders)
