[project]
name = "mahler"
version = "0.1.0"
description = "AI-assisted options trading system on Cloudflare Workers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
