[package]
name = "mahler-backtest"
version = "0.1.0"
edition = "2021"
description = "High-performance options backtesting engine for Mahler trading system"
license = "MIT"

[[bin]]
name = "mahler-backtest"
path = "src/main.rs"

[[bin]]
name = "orats-download"
path = "src/bin/orats_download.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data processing
polars = { version = "0.45", features = ["parquet", "lazy", "dtype-date", "dtype-datetime"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress bars
indicatif = "0.17"

# Config files
toml = "0.8"

# Math (for Black-Scholes)
statrs = "0.17"

# Parallelism
rayon = "1.8"

# Decimal arithmetic for prices
rust_decimal = { version = "1.33", features = ["serde"] }

[dev-dependencies]
approx = "0.5"
proptest = "1.4"
rust_decimal_macros = "1.33"

[profile.release]
lto = true
codegen-units = 1
