[package]
name = "trader-joe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.7", features = ["d1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
thiserror = "1.0"

[dev-dependencies]
# No async in tests — pure functions only
